--- a/.github/workflows/maven-build-notest.yml
+++ b/.github/workflows/maven-build-notest.yml
@@ -84,7 +84,7 @@ jobs:
         done
 
     - name: Build with Maven
-      run: cd ./id_repository/id_repository/id-repository-identity-service mvn -U -B package -Dmaven.wagon.http.retryHandler.count=2 -Dmaven.test.skip=true -pl identity-service --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
+      run: cd ./id_repository/id_repository/id-repository-identity-service && mvn -U -B package -Dmaven.wagon.http.retryHandler.count=2 -Dmaven.test.skip=true -pl identity-service --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
 
     - name: Ready the springboot artifacts
       if: ${{ !contains(github.ref, 'master') || !contains(github.ref, 'main') }}
