--- a/.github/workflows/maven-build-notest.yml
+++ b/.github/workflows/maven-build-notest.yml
@@ -84,8 +84,8 @@ jobs:
         done
 
     - name: Build with Maven
-      run: cd ${{ inputs.SERVICE_LOCATION/id-repository-identity-service }} && mvn -U -B package -Dmaven.wagon.http.retryHandler.count=2 -Dmaven.test.skip=true --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
-
+      run: cd ${{ inputs.SERVICE_LOCATION }}/id-repository-identity-service && mvn -U -B package -Dmaven.wagon.http.retryHandler.count=2 -Dmaven.test.skip=true --file pom.xml -s $GITHUB_WORKSPACE/settings.xml
+  
     - name: Ready the springboot artifacts
       if: ${{ !contains(github.ref, 'master') || !contains(github.ref, 'main') }}
       run: |
