--- a/.github/workflows/clear-artifacts.yml
+++ b/.github/workflows/clear-artifacts.yml
@@ -11,7 +11,7 @@ jobs:
   delete-artifacts:
     runs-on: ubuntu-latest
     steps:
-      - uses: niragit/purge-artifacts-action@v1
+      - uses: niragit/purge-artifacts-action@niradev
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           expire-in: 2days # Setting this to 0 will delete all artifacts
