--- a/.github/workflows/clear-artifacts.yml
+++ b/.github/workflows/clear-artifacts.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: kolpav/purge-artifacts-action@v1
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           expire-in: 2days # Setting this to 0 will delete all artifacts
       - uses: 8398a7/action-slack@v3
         with:
