--- a/.github/workflows/maven-sonar-analysis-two.yml
+++ b/.github/workflows/maven-sonar-analysis-two.yml
@@ -9,7 +9,7 @@ on:
       SONAR_URL:
         required: false
         type: string
-        default: 'https://sonarcloud.io'
+        default: 'https://sonar-mosiphq.nira.go.ug'
       PROJECT_KEY:
         required: false
         type: string
@@ -59,4 +59,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dmaven.test.skip=true -Dgpg.skip -Dsonar.projectKey=commons -Dsonar.projectName='commons' -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dmaven.test.skip=true -Dgpg.skip -Dsonar.projectKey=commons -Dsonar.projectName='commons' -Dsonar.host.url=${{ inputs.SONAR_URL }}
