--- a/.github/workflows/maven-sonar-analysis-two.yml
+++ b/.github/workflows/maven-sonar-analysis-two.yml
@@ -59,4 +59,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dmaven.test.skip=true -Dgpg.skip -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.projectKey=commons -Dsonar.projectName='commons' -Dsonar.host.url=${{ inputs.SONAR_URL }}
+        run: mvn clean verify sonar:sonar -Dsonar.host.url=https://sonar-mosiphq.nira.go.ug
