--- a/.github/workflows/maven-sonar-analysis-two.yml
+++ b/.github/workflows/maven-sonar-analysis-two.yml
@@ -59,4 +59,4 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: mvn clean verify sonar:sonar -Dmaven.test.skip=true -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dgpg.skip -Dsonar.host.url=https://sonar-mosiphq.nira.go.ug
+        run: mvn sonar:sonar -Dsonar.host.url=https://sonar-mosiphq.nira.go.ug -Dsonar.login=${{ secrets.SONAR_TOKEN }}
